--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,2 @@
 language: objective-c
-script: xctool -project ObjCDesignPatterns.xcodeproj -scheme ObjCDesignPatterns -configuration Release -sdk iphonesimulator -arch i386 build
+script: xctool -workspace ObjCDesignPatterns.xcworkspace -scheme ObjCDesignPatterns -configuration Release -sdk iphonesimulator -arch i386 build
