--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: objective-c
-script: xctool -project ObjCDesignPatterns.xcodeproj -scheme ObjCDesignPatterns -configuration Release -sdk iphonesimulator
+script: xctool -workspace ObjCDesignPatterns.xcworkspace -scheme ObjCDesignPatterns -configuration Release -sdk iphonesimulator -arch i386 build
 
