--- a/podfile
+++ b/podfile
@@ -1,6 +1,6 @@
 platform :ios, '6.0'
 
 target :ObjCDesignPatternsTests, :exclusive => true do
-   pod 'Kiwi'
-   pod 'Swizzlean', '~>0.1.1'
+   pod 'Kiwi', '2.2.2'
+   pod 'Swizzlean', '0.1.1'
 end
